--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-      "start": "node app.js"
+        "start": "node app.js"
     },
     "dependencies": {
-      "bcrypt": "^5.0.1",
-      "connect-mongo": "^4.4.1",
-      "express": "^4.17.1",
-      "joi": "^17.5.1",
-      "mongodb": "^4.4.0",
-      "dotenv": "^10.0.0",
-      "express-session": "^1.18.1",
-      "ejs": "^3.1.10"
+        "bcrypt": "^5.0.1",
+        "connect-mongo": "^4.4.1",
+        "dotenv": "^10.0.0",
+        "ejs": "^3.1.10",
+        "express": "^4.17.1",
+        "express-session": "^1.18.1",
+        "joi": "^17.5.1",
+        "mongodb": "^4.4.0",
+        "multer": "^1.4.5-lts.2"
     },
-    "devDependencies": {},
     "engines": {
-      "node": ">=14.0.0"
+        "node": ">=14.0.0"
     },
     "author": "",
     "license": "ISC"
-  }
-  
+}
