--- a/views/package.json
+++ b/views/package.json
@@ -14,7 +14,9 @@
       "mongodb": "^4.4.0",
       "dotenv": "^10.0.0",
       "express-session": "^1.18.1",
-      "ejs": "^3.1.10"
+      "ejs": "^3.1.10",
+      "multer": "^1.4.5"
+
     },
     "devDependencies": {},
     "engines": {
