--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "call-bound": "^1.0.4",
         "connect-mongo": "^4.4.1",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.10",
