--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "axios": "^1.9.0",
         "bcrypt": "^5.0.1",
         "call-bound": "^1.0.4",
         "connect-mongo": "^4.4.1",
@@ -16,7 +17,8 @@
         "express-session": "^1.18.1",
         "joi": "^17.5.1",
         "mongodb": "^4.4.0",
-        "multer": "^1.4.5-lts.2"
+        "multer": "^1.4.5-lts.2",
+        "node-fetch": "^3.3.2"
     },
     "engines": {
         "node": ">=14.0.0"
