--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "node": ">=14.0.0"
     },
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    }
 }
